// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`does not apply priority class for unsupported value 1`] = `
<DocumentFragment>
  <button
    class="btn"
    type="button"
  >
    Button
  </button>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.d=[0,1,_.a={"EventAttributes:#text/0":_.b={},content:_._["src/tags/evo-button/examples/button.marko_1_renderer"](_.c={})}],_.b.keydown=_._["src/tags/evo-button/index.marko_0/onKeyDown"](_.a),_.d)]
  </script>
</DocumentFragment>
`;

exports[`renders a11yText when bodyState === loading 1`] = `
<DocumentFragment>
  <button
    a11ytext="loading text"
    class="btn btn--primary"
    type="button"
  >
    <span
      class="btn__cell"
    >
      <span
        aria-label=""
        class="progress-spinner"
        role="img"
      >
        <svg
          aria-hidden="true"
          class="icon icon--24"
        >
          <symbol
            fill="none"
            id="GENERATED-0"
            viewBox="0 0 24 24"
          >
            <path
              d="M22.5 12A10.5 10.5 0 1 1 9.514 1.798"
              stroke="var(--color-spinner-icon-background, #3665F3)"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
            <path
              d="M14.606 1.829a10.5 10.5 0 0 1 4.056 2.055 10.499 10.499 0 0 1 2.806 3.577"
              stroke="var(--color-spinner-icon-foreground, #E5E5E5)"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3"
            />
          </symbol>
          <use
            href="#icon-spinner-24"
          />
        </svg>
      </span>
    </span>
  </button>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.d=[0,1,_.a={"EventAttributes:#text/0":_.b={},content:_._["src/tags/evo-button/examples/button.marko_1_renderer"](_.c={}),bodyState:"loading"},3,{htmlInput:{}},2,{htmlInput:{}}],_.b.keydown=_._["src/tags/evo-button/index.marko_0/onKeyDown"](_.a),_.d),"src/tags/evo-icon/index.marko_0_htmlInput",9,"src/tags/evo-progress-spinner/index.marko_0_htmlInput",6];M._.w()
  </script>
</DocumentFragment>
`;

exports[`renders button with fluid=false 1`] = `
<DocumentFragment>
  <button
    class="btn btn--secondary"
    type="button"
  >
    Button
  </button>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.d=[0,1,_.a={"EventAttributes:#text/0":_.b={},content:_._["src/tags/evo-button/examples/button.marko_1_renderer"](_.c={})}],_.b.keydown=_._["src/tags/evo-button/index.marko_0/onKeyDown"](_.a),_.d)]
  </script>
</DocumentFragment>
`;

exports[`renders button with fluid=true 1`] = `
<DocumentFragment>
  <button
    class="btn btn--fluid btn--secondary"
    type="button"
  >
    Button
  </button>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.d=[0,1,_.a={"EventAttributes:#text/0":_.b={},content:_._["src/tags/evo-button/examples/button.marko_1_renderer"](_.c={})}],_.b.keydown=_._["src/tags/evo-button/index.marko_0/onKeyDown"](_.a),_.d)]
  </script>
</DocumentFragment>
`;

exports[`renders button with priority=delete 1`] = `
<DocumentFragment>
  <button
    class="btn"
    type="button"
  >
    Button
  </button>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.d=[0,1,_.a={"EventAttributes:#text/0":_.b={},content:_._["src/tags/evo-button/examples/button.marko_1_renderer"](_.c={})}],_.b.keydown=_._["src/tags/evo-button/index.marko_0/onKeyDown"](_.a),_.d)]
  </script>
</DocumentFragment>
`;

exports[`renders button with priority=primary 1`] = `
<DocumentFragment>
  <button
    class="btn btn--primary"
    type="button"
  >
    Button
  </button>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.d=[0,1,_.a={"EventAttributes:#text/0":_.b={},content:_._["src/tags/evo-button/examples/button.marko_1_renderer"](_.c={})}],_.b.keydown=_._["src/tags/evo-button/index.marko_0/onKeyDown"](_.a),_.d)]
  </script>
</DocumentFragment>
`;

exports[`renders button with priority=secondary 1`] = `
<DocumentFragment>
  <button
    class="btn btn--secondary"
    type="button"
  >
    Button
  </button>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.d=[0,1,_.a={"EventAttributes:#text/0":_.b={},content:_._["src/tags/evo-button/examples/button.marko_1_renderer"](_.c={})}],_.b.keydown=_._["src/tags/evo-button/index.marko_0/onKeyDown"](_.a),_.d)]
  </script>
</DocumentFragment>
`;

exports[`renders button with size=large 1`] = `
<DocumentFragment>
  <button
    class="btn btn--large btn--secondary"
    type="button"
  >
    Button
  </button>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.d=[0,1,_.a={"EventAttributes:#text/0":_.b={},content:_._["src/tags/evo-button/examples/button.marko_1_renderer"](_.c={})}],_.b.keydown=_._["src/tags/evo-button/index.marko_0/onKeyDown"](_.a),_.d)]
  </script>
</DocumentFragment>
`;

exports[`renders defaults 1`] = `
<DocumentFragment>
  <button
    class="btn btn--secondary"
    type="button"
  >
    Button
  </button>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.d=[0,1,_.a={"EventAttributes:#text/0":_.b={},content:_._["src/tags/evo-button/examples/button.marko_1_renderer"](_.c={})}],_.b.keydown=_._["src/tags/evo-button/index.marko_0/onKeyDown"](_.a),_.d)]
  </script>
</DocumentFragment>
`;

exports[`renders disabled version 1`] = `
<DocumentFragment>
  <button
    class="btn btn--secondary"
    disabled=""
    type="button"
  >
    Button
  </button>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.d=[0,1,_.a={"EventAttributes:#text/0":_.b={},input_disabled:!0,content:_._["src/tags/evo-button/examples/button.marko_1_renderer"](_.c={})}],_.b.keydown=_._["src/tags/evo-button/index.marko_0/onKeyDown"](_.a),_.d)]
  </script>
</DocumentFragment>
`;

exports[`renders expanded button 1`] = `
<DocumentFragment>
  <button
    class="btn btn--form"
    type="button"
  >
    <span
      class="btn__cell"
    >
      <span
        class="btn__text"
      >
        Button
      </span>
      <svg
        aria-hidden="true"
        class="icon icon--16"
      >
        <symbol
          id="GENERATED-0"
          viewBox="0 0 16 16"
        >
          <path
            d="M8.707 12.707a1 1 0 0 1-1.414 0l-6-6a1 1 0 0 1 1.414-1.414L8 10.586l5.293-5.293a1 1 0 1 1 1.414 1.414l-6 6Z"
          />
        </symbol>
        <use
          href="#icon-chevron-down-16"
        />
      </svg>
    </span>
  </button>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.d=[0,1,_.a={"EventAttributes:#text/0":_.b={},content:_._["src/tags/evo-button/examples/expand-button.marko_1_renderer"](_.c={}),bodyState:"expand"},5,{htmlInput:{}}],_.b.keydown=_._["src/tags/evo-button/index.marko_0/onKeyDown"](_.a),_.d),"src/tags/evo-icon/index.marko_0_htmlInput",8];M._.w()
  </script>
</DocumentFragment>
`;

exports[`renders fake version 1`] = `
<DocumentFragment>
  <a
    arialabel="fake button"
    class="fake-btn fake-btn--large fake-btn--primary"
    type="button"
  >
    Button
  </a>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.d=[0,1,_.a={"EventAttributes:#text/0":_.b={},content:_._["src/tags/evo-button/examples/button.marko_1_renderer"](_.c={})}],_.b.keydown=_._["src/tags/evo-button/index.marko_0/onKeyDown"](_.a),_.d)]
  </script>
</DocumentFragment>
`;

exports[`renders fixed-height button 1`] = `
<DocumentFragment>
  <button
    class="btn btn--fixed-height btn--secondary"
    type="button"
  >
    Button
  </button>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.d=[0,1,_.a={"EventAttributes:#text/0":_.b={},content:_._["src/tags/evo-button/examples/button.marko_1_renderer"](_.c={})}],_.b.keydown=_._["src/tags/evo-button/index.marko_0/onKeyDown"](_.a),_.d)]
  </script>
</DocumentFragment>
`;

exports[`renders large fixed-height button 1`] = `
<DocumentFragment>
  <button
    class="btn btn--large-fixed-height btn--secondary"
    type="button"
  >
    Button
  </button>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.d=[0,1,_.a={"EventAttributes:#text/0":_.b={},content:_._["src/tags/evo-button/examples/button.marko_1_renderer"](_.c={})}],_.b.keydown=_._["src/tags/evo-button/index.marko_0/onKeyDown"](_.a),_.d)]
  </script>
</DocumentFragment>
`;

exports[`renders large truncated button 1`] = `
<DocumentFragment>
  <button
    class="btn btn--large-truncated btn--secondary"
    type="button"
  >
    Button
  </button>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.d=[0,1,_.a={"EventAttributes:#text/0":_.b={},content:_._["src/tags/evo-button/examples/button.marko_1_renderer"](_.c={})}],_.b.keydown=_._["src/tags/evo-button/index.marko_0/onKeyDown"](_.a),_.d)]
  </script>
</DocumentFragment>
`;

exports[`renders partially disabled version 1`] = `
<DocumentFragment>
  <button
    aria-disabled="true"
    class="btn btn--secondary"
    type="button"
  >
    Button
  </button>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.d=[0,1,_.a={"EventAttributes:#text/0":_.b={},content:_._["src/tags/evo-button/examples/button.marko_1_renderer"](_.c={})}],_.b.keydown=_._["src/tags/evo-button/index.marko_0/onKeyDown"](_.a),_.d)]
  </script>
</DocumentFragment>
`;

exports[`renders small button 1`] = `
<DocumentFragment>
  <button
    class="btn btn--small btn--secondary"
    type="button"
  >
    Button
  </button>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.d=[0,1,_.a={"EventAttributes:#text/0":_.b={},content:_._["src/tags/evo-button/examples/button.marko_1_renderer"](_.c={})}],_.b.keydown=_._["src/tags/evo-button/index.marko_0/onKeyDown"](_.a),_.d)]
  </script>
</DocumentFragment>
`;

exports[`renders truncated button 1`] = `
<DocumentFragment>
  <button
    class="btn btn--truncated btn--secondary"
    type="button"
  >
    Button
  </button>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.d=[0,1,_.a={"EventAttributes:#text/0":_.b={},content:_._["src/tags/evo-button/examples/button.marko_1_renderer"](_.c={})}],_.b.keydown=_._["src/tags/evo-button/index.marko_0/onKeyDown"](_.a),_.d)]
  </script>
</DocumentFragment>
`;

exports[`renders with id override 1`] = `
<DocumentFragment>
  <button
    class="btn btn--secondary"
    id="test"
    type="button"
  >
    Button
  </button>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.d=[0,1,_.a={"EventAttributes:#text/0":_.b={},content:_._["src/tags/evo-button/examples/button.marko_1_renderer"](_.c={})}],_.b.keydown=_._["src/tags/evo-button/index.marko_0/onKeyDown"](_.a),_.d)]
  </script>
</DocumentFragment>
`;

exports[`renders with type override 1`] = `
<DocumentFragment>
  <button
    class="btn btn--secondary"
    type="submit"
  >
    Button
  </button>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.d=[0,1,_.a={"EventAttributes:#text/0":_.b={},content:_._["src/tags/evo-button/examples/button.marko_1_renderer"](_.c={})}],_.b.keydown=_._["src/tags/evo-button/index.marko_0/onKeyDown"](_.a),_.d)]
  </script>
</DocumentFragment>
`;
